@@ -1,7 +1,7 @@
 ;--------------------------------------------------------------------------
 ;  strlen.s
 ;
-;  Copyright (C) 2008-2009, Philipp Klaus Krause
+;  Copyright (C) 2008-2021, Philipp Klaus Krause
 ;
 ;  This library is free software; you can redistribute it and/or modify it
 ;  under the terms of the GNU General Public License as published by the
@@ -33,15 +33,12 @@
 ; The Z80 has the cpir instruction, which is perfect for implementing strlen().
 
 _strlen:
-	pop	bc
-	pop	hl
-	push	hl
-	push	bc
 	xor	a, a
 	ld	b, a
 	ld	c, a
 	cpir
 	ld	hl, #-1
 	sbc	hl, bc	; C flag still cleared from xor above.
+	ex	de, hl
 	ret
 
